Rename class .btn to .about-btn to avoid style overlap

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -87,7 +87,7 @@
   .heading {
     overflow: hidden;
   }
-  .btn {
+  .about-btn {
     font-size: 16px;
     padding: 10px 10px;
   }
